@@ -3,12 +3,12 @@ AUX sun-jdk-1.6.env 925 RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 SHA1 025
 AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2ef76e945eb3b4a34c4edfcf6376c58a54697b7 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581
 DIST jdk-6u12-ea-bin-b02-linux-amd64-08_dec_2008.bin 80089190 RMD160 f2d3389c26370001dc11ae8e414268b89dd398b4 SHA1 6124a13fdf6796b34d1ee49f36454f46b40de12c SHA256 c4a2b9d6ab7975ca9a409434709b365693546efbd20df56a724db19072bb9ee4
 DIST jdk-6u12-ea-bin-b02-linux-i586-08_dec_2008.bin 79953073 RMD160 8df1a28c17f6fa6db61fab125925550840756ff9 SHA1 23437ef77f06d7ecc8ad70379a7719bdb6388397 SHA256 0aa09be6f477e75ecd4bb40becbb104758d3312e563b31e80bdffe047193d1a9
-DIST jdk-7-ea-bin-b40-linux-i586-20_nov_2008.bin 63092817 RMD160 49e0cb446b1bf843c9a3f16eb2d2a871426749a1 SHA1 49070f061d26a0ffa9063d3fa8e9179a01995ad8 SHA256 1d528d4333ef80b92e3c83f811def30a3ca0b88d308859c92c116f2d133df17a
-DIST jdk-7-ea-bin-b40-linux-x64-20_nov_2008.bin 56557198 RMD160 4273491ae30d23b37f90f15bbe537182344111b7 SHA1 d110b4c432568d0ed4a73b40497e69e762447272 SHA256 436371deebd294cb2dbd425284ad270ddf0de7151832bd87426ca12bdea572ac
 DIST jdk-7-ea-bin-b41-linux-i586-04_dec_2008.bin 63137742 RMD160 a563458867ab51f60865d806054ffe41cdb17236 SHA1 bfdd133119983bcd9d1fa48277b42ef8ce4234a3 SHA256 75025d7f34b2fcba234a779c126d808185a1831e945583788f268fa4d7b048fa
 DIST jdk-7-ea-bin-b41-linux-x64-04_dec_2008.bin 56592083 RMD160 394876c3f8ef9e17a14b7e11c6a47f597bd833ee SHA1 59c9943047702e414e994775783c48a852b4ff04 SHA256 a877c4d504e738589eae413ab41226daa305339a7f9df347917d3d466fc52ce4
+DIST jdk-7-ea-bin-b42-linux-i586-19_dec_2008.bin 63155741 RMD160 2d9f4bac321f5c0a390266b71828a43c0e3c222d SHA1 2fe66fac8d77bfbc47f29b2162833eccf4faa2db SHA256 668af7eea00775a86616e4e41d3c56889a1b90ba84030cf9f3fa73f797131e74
+DIST jdk-7-ea-bin-b42-linux-x64-19_dec_2008.bin 56608400 RMD160 2fa360290edf05ffdec9b93e23876e6288b40098 SHA1 1ee151cfd1828c168a49c4135e89c4b6f2f9be5e SHA256 36a3e098dddeb2a403d374c2101345d2e33c1ab71a15203536b43eb931d2aa44
 EBUILD sun-jdk-1.6.0.12_beta2.ebuild 5511 RMD160 e3682fe07a981335a4ef03957ad33b4ba091bbe0 SHA1 2af270036e0cbef12eb8a90b7859f635d7eddc70 SHA256 5468b59376a51c36f0671f76f61960980e33260e93fe4f59647bb898746710f9
-EBUILD sun-jdk-1.7.0.0_alpha40.ebuild 4669 RMD160 fda0887a769d8565b80c60c64a461c2a820a8626 SHA1 cb8597e3c44013034a29b95c97aa0781dbe4c1d3 SHA256 17a6ff850ddadc7abcd5b629cfdf0d1765bd702003223e4ff3db7cb73dce7628
 EBUILD sun-jdk-1.7.0.0_alpha41.ebuild 4669 RMD160 c1c19032af24e1c729f190ec7259ced77def6618 SHA1 936888a026760f13a2c09822136f7eabdde4dc30 SHA256 1bee5e44ad112e1bd43da6cb232f798fbedaf500ac4f0814f5c3cc45b914b59b
-MISC ChangeLog 10114 RMD160 a58979eb791f189b9d9dff5e9ff1b7908aeaf103 SHA1 75f0f99bd5b4ed42e680551a3ec9dd81736025bb SHA256 2b5ea22ac6291cb4216b5c513efb60ff00e25e3fee06dfedab3cd9ffa4ef980c
+EBUILD sun-jdk-1.7.0.0_alpha42.ebuild 4669 RMD160 f7c980226c6defb24674ec0341c5276b1799a8b6 SHA1 2120ca2e7aa5c5aed5f5ffba48148a6adf796c64 SHA256 af99da945788993070c32b4ed6cbd02002794d4eef231f8a06e1497f8702a051
+MISC ChangeLog 10284 RMD160 8432ac97284dec6ea19d896cb548a38baddad6d0 SHA1 9a14b47f40dd7eea4087b56ae50b8d979a69bc01 SHA256 33fa9c684e86ca30b0c80a8439356284df416e7b42f2480500dc376168f35785
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
