@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha42 (22 Dec 2008)
+
+  06 Dec 2008: Fabian Fingerle <fabian@datensalat.eu>
+  +sun-jdk-1.7.0.0_alpha42.ebuild -sun-jdk-1.7.0.0_alpha40.ebuild:
+  Bump.
+
   12 Dec 2008; Vlastimil Babka <caster@gentoo.org>
   +sun-jdk-1.6.0.12_beta2.ebuild:
   Version bump for a pre-release of sun-jdk 6u12 which finally brings an
